<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/serachText"
            android:layout_width="296dp"
            android:layout_height="47dp"
            android:text="@string/searchText"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.259" />

    <EditText
            android:id="@+id/phoneNumberText"
            android:layout_width="162dp"
            android:layout_height="42dp"
            android:autofillHints="@string/autoHintNumber"
            android:ems="10"
            android:hint="@string/autoHintNumber"
            android:inputType="phone"
            android:textAlignment="center"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/serachText"
            app:layout_constraintVertical_bias="0.154" />

    <Button
            android:id="@+id/btnOk"
            android:layout_width="85dp"
            android:layout_height="42dp"
            android:text="@string/btnOkText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumberText"
            app:layout_constraintVertical_bias="0.219" />
</androidx.constraintlayout.widget.ConstraintLayout>